<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorSecondary"
    android:divider="@color/colorWhite_dimmed"
    android:showDividers="middle"
    android:theme="@style/Light"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">
        <TextView
            style="@style/AppTitle"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_gravity="center_vertical"
            android:text="@string/settings_locality_title" />

        <ImageButton
            android:id="@+id/localitySettingsFragment_cancelButton"
            android:layout_gravity="center_vertical"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/glyph_cancel" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        style="@style/AppPrimary"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:paddingHorizontal="16dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/settings_locality_message" />

    <androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Dark"
    android:padding="16dp"
    android:orientation="vertical">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/localitySettingsFragment_locationSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppPrimary"
        android:theme="@style/AppSwitch"
        android:text="@string/settings_remember_location" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/localitySettingsFragment_localitySwitch"
        android:layout_marginTop="16dp"
        style="@style/AppPrimary"
        android:theme="@style/AppSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_remember_locality"
        />
</androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/AppPrimaryHighlighted"
        android:textColor="@color/colorWhite"
        android:text="@string/common_save"
        android:id="@+id/localitySettingsFragment_saveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mapSettingsFragment_relativeLayout"
        android:background="@color/colorGreen" />




</androidx.appcompat.widget.LinearLayoutCompat>