<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Light"
    android:id="@+id/mapFragment_root">

    <com.google.android.gms.maps.MapView
        android:id="@+id/fragmentMap_mapView"
        app:layout_constraintTop_toBottomOf="@id/mapFragment_tabLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"/>



<!--        <androidx.fragment.app.FragmentContainerView-->
<!--            android:id="@+id/fragmentMap_supportMapFragment"-->
<!--            android:name="com.google.android.gms.maps.MapFragment"-->
<!--            app:layout_constraintTop_toBottomOf="@id/mapFragment_tabLayout"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_width="0dp"-->
<!--            android:layout_height="0dp"/>-->

    <com.google.android.material.tabs.TabLayout
        android:visibility="gone"
        android:background="@color/colorPrimary"
        android:id="@+id/mapFragment_tabLayout"
        android:layout_width="0dp"
        app:tabTextAppearance="@style/AppPrimary"
        android:theme="@style/Light"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapViewCategories_regular"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapViewCategories_satelite"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mapViewCategories_topographical"/>
    </com.google.android.material.tabs.TabLayout>

    <com.noque.svampeatlas.views.BackgroundView
        android:id="@+id/fragmentMap_backgroundView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>